force-app/main/default/objects/PoliticaDesconto__c/PoliticaDesconto__c.object-meta.xml
<CustomObject>
    <label>Política de Desconto</label>
    <nameField>
        <label>Nome da Política de Desconto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Políticas de Descontos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>