force-app/main/default/objects/PoliticaDesconto__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>