force-app/main/default/objects/PoliticaDesconto__c/fields/BypassDuplicateRule__c.field-meta.xml
<CustomField>
    <fullName>BypassDuplicateRule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BypassDuplicateRule</label>
    <type>Checkbox</type>
</CustomField>