force-app/main/default/objects/PoliticaDesconto__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <description>Valor percentual de desconto</description>
    <inlineHelpText>Valor percentual de desconto</inlineHelpText>
    <label>Desconto</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>