force-app/main/default/objects/PoliticaDesconto__c/fields/Expressao__c.field-meta.xml
<CustomField>
    <fullName>Expressao__c</fullName>
    <label>Expressão</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>