force-app/main/default/objects/PoliticaDesconto__c/fields/Validade__c.field-meta.xml
<CustomField>
    <fullName>Validade__c</fullName>
    <description>Validade em que a política de desconto deixa de ser valida.</description>
    <label>Validade</label>
    <type>Date</type>
</CustomField>