force-app/main/default/objects/PoliticaDesconto__c/validationRules/BloquearDesconto100Porcento.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearDesconto100Porcento</fullName>
    <active>true</active>
    <description>Impedir que um usuário defina um desconto maior que 100%.</description>
    <errorConditionFormula>Desconto__c &gt; 1</errorConditionFormula>
    <errorDisplayField>Desconto__c</errorDisplayField>
    <errorMessage>Não é possível criar um desconto que seja maior que 100%</errorMessage>
</ValidationRule>