force-app/main/default/objects/PoliticaDesconto__c/validationRules/ValidadeInvalida.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidadeInvalida</fullName>
    <active>true</active>
    <errorConditionFormula>Validade__c &lt; TODAY() &amp;&amp;  Ativo__c</errorConditionFormula>
    <errorDisplayField>Validade__c</errorDisplayField>
    <errorMessage>A validade não pode ser inferior à data atual.</errorMessage>
</ValidationRule>