force-app/main/default/objects/PoliticaDesconto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Desconto__c</columns>
    <columns>Validade__c</columns>
    <columns>Ativo__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>